# R-Type

./: .clang-format  .gitignore  AShip_8hpp_source.html  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Component_2Collide_2collide_8hpp_source.html  Component_2Sound_2sound_8hpp_source.html  CoreScreen_8hpp_source.html  Doxyfile  EcsExceptions_8hpp_source.html  EventCode_8hpp.html  EventCode_8hpp_source.html  Events_8hpp_source.html  Exceptions_8hpp_source.html  GameExceptions_8hpp_source.html  Game_8hpp_source.html  Globals_8hpp_source.html  HtpScreen_8hpp_source.html  IComponent_8hpp_source.html  IScreen_8hpp_source.html  IShip_8hpp_source.html  ISystem_8hpp_source.html  IntroScreen_8hpp_source.html  LICENSE  Makefile  MenuScreen_8hpp_source.html  Message_8hpp_source.html  MultiplayerScreen_8hpp_source.html  OptionsScreen_8hpp_source.html  README.md  RoomScreen_8hpp_source.html  Rooms_8hpp_source.html  SafeQueue_8hpp_source.html  ScreensExceptions_8hpp_source.html  Script_8hpp_source.html  Server_8hpp_source.html  Sfml_8hpp_source.html  SoloScreen_8hpp_source.html  System_2Collide_2collide_8hpp_source.html  (+263 more)
.github/workflows/: build-and-release.yml  build.yml  ci.yaml  ci.yml  (+3 more)
Docs/: doc Ecs  doc_Ecs  doc_Ecs.md  how_to_use_ecs.md  how_to_use_script.md
doc/: warnings.txt
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
include/: EventCode.hpp
meetings/: 19-09-22_17.md  23-09-22_12.md  27-09-22_15.md  30-09-22-15.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+63 more)
src/: CMakeLists.txt  a.out  main.cpp
src/client/: Globals.hpp  main.cpp
src/client/events/: Events.cpp  Events.hpp
src/client/game/: Game.cpp  Game.hpp
src/client/network/: Client.cpp  Client.hpp  ClientBuffer.cpp  ClientBuffer.hpp  client  client.cpp  client.hpp  message.hpp
src/client/network/buffer/: ClientBuffer.cpp  ClientBuffer.hpp
src/client/screens/: IScreen.hpp
src/client/screens/core/: CoreScreen.cpp  CoreScreen.hpp
src/client/screens/htp/: HtpScreen.cpp  HtpScreen.hpp
src/client/screens/intro/: IntroScreen.cpp  IntroScreen.hpp
src/client/screens/menu/: MenuScreen.cpp  MenuScreen.hpp
src/client/screens/multiplayer/: MultiplayerScreen.cpp  MultiplayerScreen.hpp
src/client/screens/options/: OptionsScreen.cpp  OptionsScreen.hpp
src/client/screens/room/: RoomScreen.cpp  RoomScreen.hpp
src/client/screens/solo/: SoloScreen.cpp  SoloScreen.hpp
src/client/script/: Script.cpp  Script.hpp  script.txt
src/client/tools/: Tools.cpp  Tools.hpp
src/ecs/: world.cpp  world.hpp
src/ecs/Component/: IComponent.hpp
src/ecs/Component/Alive/: Alive.hpp  alive.cpp  alive.hpp
src/ecs/Component/Collide/: Collide.hpp  collide.cpp  collide.hpp
src/ecs/Component/Destroyable/: Destroyable.cpp  Destroyable.hpp
src/ecs/Component/Drawable2D/: Drawable2D.cpp  Drawable2D.hpp  drawable2d.cpp  drawable2d.hpp
src/ecs/Component/Explodable/: Explodable.hpp
src/ecs/Component/Health/: health.cpp  health.hpp
src/ecs/Component/Inventory/: Inventory.cpp  Inventory.hpp  inventory.cpp  inventory.hpp
src/ecs/Component/Projectile/: projectile.cpp  projectile.hpp
src/ecs/Component/Ship/: AShip.cpp  AShip.hpp  IShip.hpp  boss.cpp  boss.hpp  kamikaze.cpp  kamikaze.hpp  recruit.cpp  recruit.hpp  rusher.cpp  rusher.hpp  ship.cpp  ship.hpp  sniper.cpp  sniper.hpp  stealthy.cpp  stealthy.hpp  support.cpp  support.hpp  tank.cpp  tank.hpp  turret.cpp  turret.hpp  zigzag.cpp  zigzag.hpp
src/ecs/Component/Sound/: Sound.hpp  sound.cpp  sound.hpp
src/ecs/Component/Transform/: Transform.hpp  transform.cpp  transform.hpp
src/ecs/Entity/: Entity.cpp  Entity.hpp  entity.cpp  entity.hpp
src/ecs/System/: ISystem.hpp
src/ecs/System/Collide/: Collide.cpp  Collide.hpp  collide.cpp  collide.hpp
src/ecs/System/Draw2D/: Draw2D.cpp  Draw2D.hpp  draw2d.cpp  draw2d.hpp
src/ecs/System/Enemypath/: enemypath.cpp  enemypath.hpp
src/ecs/System/Explodable/: Explodable.cpp  Explodable.hpp  explodable.cpp  explodable.hpp
src/ecs/System/Movement/: Movement.cpp  Movement.hpp  movement.cpp  movement.hpp
src/ecs/System/Particles/: particles.cpp  particles.hpp
src/ecs/System/Sound/: Sound.cpp  Sound.hpp  sound.cpp  sound.hpp
src/ecs/component/: IComponent.hpp
src/ecs/component/alive/: Alive.cpp  Alive.hpp
src/ecs/component/collide/: Collide.cpp  Collide.hpp
src/ecs/component/destroyable/: Destroyable.hpp
src/ecs/component/drawable2d/: Drawable2D.cpp  Drawable2D.hpp
src/ecs/component/explodable/: Explodable.cpp  Explodable.hpp
src/ecs/component/inventory/: Inventory.cpp  Inventory.hpp
src/ecs/component/sound/: Sound.cpp  Sound.hpp
src/ecs/component/transform/: Transform.cpp  Transform.hpp
src/ecs/entity/: Entity.cpp  Entity.hpp
src/ecs/system/: ISystem.hpp
src/ecs/system/collide/: Collide.cpp  Collide.hpp
src/ecs/system/draw2d/: Draw2D.hpp
src/ecs/system/explodable/: Explodable.cpp  Explodable.hpp
src/ecs/system/movement/: Movement.hpp
src/ecs/system/sound/: Sound.hpp
src/events/: Events.cpp  Events.hpp
src/exceptions/: EcsExceptions.hpp  Exceptions.hpp  GameExceptions.hpp  ScreensExceptions.hpp
src/game/: Game.cpp  Game.hpp
src/network/: Server.hpp  a.out  client  client.cpp  server  server.cpp
src/screens/: IScreen.hpp
src/screens/menu/: MenuScreen.cpp  MenuScreen.hpp
src/script/: Script.cpp  Script.hpp  script.txt  script_easy.txt  script_hard.txt
src/server/: Game.cpp  Game.hpp  main.cpp  server
src/server/network/: Client.hpp  HandleCommand.cpp  HandleCommand.hpp  SafeQueue.cpp  SafeQueue.hpp  Server.cpp  Server.hpp  game_data.cpp  game_data.hpp  message.hpp  server.cpp  server.hpp
src/sfml/: Sfml.hpp
src/utils/: Message.hpp  Rooms.hpp
(+364 files in other folders)
